--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dio: ^5.5.0+1
   syncfusion_flutter_datagrid: ^26.2.9
   syncfusion_flutter_charts: ^26.2.14
+  flat: ^0.5.0
 
 
 dev_dependencies:
