--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,16 @@ dependencies:
   syncfusion_flutter_datagrid: ^26.2.9
   flat: ^0.5.0
   syncfusion_flutter_charts: ^26.2.14
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 
 dev_dependencies:
+  build_runner: ^2.4.13
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.9.0
   lint: ^1.8.0
 
 flutter:
