set up environment variables using flutter_dotenv

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   scribble: ^0.10.0+1
   path_provider: ^2.1.5
   number_paginator: ^0.4.1
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -44,6 +45,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/PolarBearHead.png
     - assets/2024GameField.png
     - assets/2024BlankAutoField.png
