--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_web_plugins:
+    sdk: flutter
   flutter_inappwebview: ^5.3.2
   provider: ^6.1.2
   qr_flutter: ^4.1.0
